--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -167,6 +167,7 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
+                    android:textColor="@color/black"
                     android:background="@drawable/button_background"
                     android:text="OFF" />
 
@@ -175,6 +176,7 @@
                     android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="24dp"
+                    android:textColor="@color/black"
                     android:background="@drawable/button_background"
                     android:text="ON" />
 
@@ -186,6 +188,7 @@
                     android:background="@drawable/button_background"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
+                    android:textColor="@color/black"
                     android:text="Auto Mode" />
 
             </LinearLayout>
