--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -16,6 +16,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="64dp"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
@@ -46,10 +47,10 @@
             android:background="@drawable/splashicon"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_marginTop="96dp">
             <TextView
                 android:layout_width="wrap_content"
@@ -57,6 +58,14 @@
                 android:text="M.Fahruroji.G\nAkmal Ahmadi.S"
                 android:textColor="@color/black"
                 android:textAlignment="center"
+                android:textSize="18dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="96dp"
+                android:text="Politeknik Negeri Jakarta"
+                android:textColor="@color/black"
                 android:textSize="18dp"/>
         </LinearLayout>
 
